Fixes double scroll bar

--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -2,13 +2,11 @@
     flex: 1;
     flex-basis: 1e-9px;
     padding: 16px 24px;
-    overflow-y: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
     position: relative;
     z-index: 0;
-    height: calc(100vh - 88px);
 }
 
 .search-clip-thumbnail {
